feat: APIエンドポイントから/v1セグメントを削除
